--- a/dc-templates/deployment.yaml
+++ b/dc-templates/deployment.yaml
@@ -40,6 +40,9 @@ services:
     depends_on:
       - discovery-solr
 
+  client:
+    image: ucdlib/rp-ucd-client:{{UCD_CLIENT_REPO_TAG}}
+
   gateway:
     image: ucdlib/rp-ucd-service-gateway:{{UCD_SERVICE_GATEWAY_REPO_TAG}}
     ports:
