--- a/templates/local-dev.yaml
+++ b/templates/local-dev.yaml
@@ -37,6 +37,8 @@ services:
     environment:
       - bootstrap.memory_lock=true
       - discovery.type=single-node
+      - cluster.routing.allocation.disk.threshold_enabled=false
+      - cluster.routing.allocation.disk.watermark.flood_stage=98%
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
@@ -81,6 +83,7 @@ services:
       - .env
     volumes:
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/debouncer/index.js:/service/index.js
+      - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/debouncer/lib:/service/lib
     # command: bash -c "tail -f /dev/null"
 
   indexer:
