--- a/templates/local-dev.yaml
+++ b/templates/local-dev.yaml
@@ -72,7 +72,7 @@ services:
     env_file:
       - .env
     ports:
-      - 3000:${HOST_PORT:-8080}
+      - ${HOST_PORT:-8080}:3000
     volumes:
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/gateway/index.js:/service/index.js
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/gateway/controllers:/service/controllers
