--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -89,6 +89,8 @@ services:
     image: {{INDEXER_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
+    ports:
+      - 3001:3000
     restart: on-failure
 
 volumes:
