--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
     restart: on-failure
 
   gateway:
-    image: ucdlib/rp-ucd-gateway:master
+    image: ucdlib/rp-ucd-gateway:dev
     env_file:
       - .env
     ports:
@@ -66,7 +66,7 @@ services:
     restart: on-failure
 
   auth:
-    image: ucdlib/rp-ucd-auth-cas:master
+    image: ucdlib/rp-ucd-auth-cas:dev
     env_file:
       - .env
     environment:
@@ -74,21 +74,23 @@ services:
     restart: on-failure
 
   api:
-    image: ucdlib/rp-ucd-api:master
+    image: ucdlib/rp-ucd-api:dev
     env_file:
       - .env
     restart: on-failure
 
   debouncer:
-    image: ucdlib/rp-ucd-kafka-debouncer:master
+    image: ucdlib/rp-ucd-kafka-debouncer:dev
     env_file:
       - .env
     restart: on-failure
 
   indexer:
-    image: ucdlib/rp-ucd-es-indexer:master
+    image: ucdlib/rp-ucd-es-indexer:dev
     env_file:
       - .env
+    ports:
+      - 3001:3000
     restart: on-failure
 
 volumes:
