--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     volumes:
       - fuseki-data:/fuseki
     ports: # still exposed for admin access
-      - ${FUSEKI_HOST_PORT:-3001}:3030
+      - ${FUSEKI_HOST_PORT:-8081}:3030
 
   kafka:
     image: bitnami/kafka:2.5.0
@@ -90,7 +90,7 @@ services:
     env_file:
       - .env
     ports:
-      - 3001:3000
+      - $(INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
 
 volumes:
