--- a/templates/local-dev.yaml
+++ b/templates/local-dev.yaml
@@ -19,7 +19,7 @@ services:
     volumes:
       - fuseki-data:/fuseki
     ports:
-      - ${FUSEKI_HOST_PORT:-3001}:3030
+      - ${FUSEKI_HOST_PORT:-8081}:3030
 
   kafka:
     image: {{KAFKA_IMAGE_NAME}}:{{KAFKA_TAG}}
@@ -121,7 +121,7 @@ services:
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/es-indexer/lib:/service/lib
       - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/es-indexer/controllers:/service/controllers
     ports:
-      - 3001:3000
+      - ${INDEXER_HOST_PORT:-8082}:3000
       # command: bash -c "tail -f /dev/null"
 
 volumes:
