--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -90,7 +90,7 @@ services:
     env_file:
       - .env
     ports:
-      - $(INDEXER_HOST_PORT:-8082}:3000
+      - ${INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
 
 volumes:
