--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,10 +15,9 @@ services:
       - .env
     environment:
       - ADMIN_PASSWORD=${FUSEKI_PASSWORD}
-      - FUSEKI_DB_INIT=/staging/material_science
     volumes:
       - fuseki-data:/fuseki
-      - ../../experts-data:/staging
+      - ./io:/staging
     ports: # still exposed for admin access
       - ${FUSEKI_HOST_PORT:-8081}:3030
 
