--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,14 @@ services:
 
   zookeeper:
     image: zookeeper:3.6
-    environment:
+    environment: 
       - ALLOW_ANONYMOUS_LOGIN=yes
     volumes:
       - zookeeper-data:/data
       - zookeeper-datalog:/datalog
 
   fuseki:
-    image: ucdlib/rp-ucd-fuseki:${FUSEKI_VERSION:-1.2.0}
+    image: ucdlib/rp-ucd-fuseki:1.2.0
     env_file:
       - .env
     volumes:
@@ -19,22 +19,23 @@ services:
       - ${FUSEKI_HOST_PORT:-8081}:3030
 
   harvest:
-    image: ucdlib/rp-ucd-harvest:1.0.0
-    command: tail -f /dev/null
+    image: ucdlib/rp-ucd-harvest:dev
     env_file:
       - .env
     volumes:
+       - harvest-xslt-data:/usr/local/vivo/harvester/data
        - harvest-data:/var/lib/harvest
+    command: tail -f /dev/null
 
   kafka:
     image: bitnami/kafka:2.5.0
     env_file:
       - .env
-    environment:
+    environment: 
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_CLIENT_USER=admin
-    volumes:
+    volumes: 
       - kafka-data:/bitnami/kafka
     depends_on:
       - "zookeeper"
@@ -106,4 +107,5 @@ volumes:
   zookeeper-data:
   zookeeper-datalog:
   redis-data:
+  harvest-xslt-data:
   harvest-data:
