--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -99,6 +99,12 @@ services:
       - ${INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
 
+  models:
+    image: ucdlib/rp-ucd-es-models:sandbox
+    env_file:
+      - .env
+    restart: on-failure
+
 volumes:
   es-data:
   fuseki-data:
