--- a/templates/local-dev.yaml
+++ b/templates/local-dev.yaml
@@ -136,6 +136,18 @@ services:
       - ${INDEXER_HOST_PORT:-8082}:3000
       # command: bash -c "tail -f /dev/null"
 
+  models:
+    image: {{MODEL_IMAGE_NAME}}:{{VESSEL_TAG}}
+    env_file:
+      - .env
+    volumes:
+      - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/es-models/index.js:/service/index.js
+      - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/es-models/default:/service/default
+      - ../{{REPOSITORY_DIR}}/{{VESSEL_REPO_NAME}}/es-models/model:/service/model
+    ports:
+      - ${MODEL_HOST_PORT:-8084}:3000
+    # command: bash -c "tail -f /dev/null"
+
 volumes:
   es-data:
   fuseki-data:
