--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -64,14 +64,14 @@ steps:
     - name: 'config'
       path: '/config'
 
-  # - name: gcr.io/cloud-builders/gcloud
-  #   entrypoint: 'bash'
-  #   args: [ '-c', 'gcloud compute ssh $${CLUSTER_VM} --zone="$${CLUSTER_ZONE}" -- "BRANCH_NAME="$BRANCH_NAME" /opt/$$CLUSTER_NAME/gcloud/dc-deploy.sh"' ]
-  #   env: 
-  #     - 'BRANCH_NAME=$BRANCH_NAME'
-  #     - 'CLUSTER_NAME=rp-$BRANCH_NAME'
-  #     - 'CLUSTER_ZONE=us-central1-a'
-  #     - 'CLUSTER_VM=rp-ucd-deployments'
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
+    args: [ '-c', 'gcloud compute ssh $${CLUSTER_VM} --zone="$${CLUSTER_ZONE}" -- "BRANCH_NAME="$BRANCH_NAME" /opt/$$CLUSTER_NAME/gcloud/dc-deploy.sh"' ]
+    env: 
+      - 'BRANCH_NAME=$BRANCH_NAME'
+      - 'CLUSTER_NAME=rp-$BRANCH_NAME'
+      - 'CLUSTER_ZONE=us-central1-a'
+      - 'CLUSTER_VM=rp-ucd-deployments'
 
 substitutions:
   _CONFIG_BUCKET: ci-build-config
