--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -28,13 +28,14 @@ steps:
     entrypoint: 'bash'
     args: [ '-c', 'gcloud secrets versions access latest --secret=libosdev-dockerhub-secret > pass.txt' ]
     # this is a hack to get the BRANCH_NAME and SHORT_SHA in the build metadata even when
-    # submitted from via ./gcloud/push.sh.  All --substitutions variables have to exist in the
+    # submitted from via submit.sh.  All --substitutions variables have to exist in the
     # yaml file.  Even when you are substiting special variables like BRANCH_NAME and SHORT_SHA (lame).
     env: 
       - 'REPO_NAME=$REPO_NAME'
       - 'BRANCH_NAME=$BRANCH_NAME'
       - 'SHORT_SHA=$SHORT_SHA'
       - 'TAG_NAME=$TAG_NAME'
+      - '_UCD_LIB_SOURCE=$_UCD_LIB_SOURCE'
 
   - name: gcr.io/cloud-builders/docker
     entrypoint: "sh"
