adding github info to build gcs log

--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -18,6 +18,11 @@ steps:
     - 'REPO_NAME=$REPO_NAME'
     - 'BRANCH_NAME=$BRANCH_NAME'
     - '_UCD_LIB_INITIATOR=$_UCD_LIB_INITIATOR'
+    - '_GITHUB_EVENT=$_GITHUB_EVENT'
+    - '_GITHUB_ISSUE_NUMBER=$_GITHUB_ISSUE_NUMBER'
+    - '_GITHUB_REPOSITORY=$_GITHUB_REPOSITORY'
+    - '_GITHUB_PR_USER=$_GITHUB_PR_USER'
+    - '_GITHUB_PR_MERGED_BY=$_GITHUB_PR_MERGED_BY'
     - 'BUILD_ID=$BUILD_ID'
     volumes:
     - name: 'config'
