--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,13 +58,13 @@ services:
       - es-data:/usr/share/elasticsearch/data
 
   client:
-    image: ucdlib/rp-ucd-client:sandbox
+    image: ucdlib/rp-ucd-client:dev
     env_file:
       - .env
     restart: on-failure
 
   gateway:
-    image: ucdlib/rp-ucd-gateway:sandbox
+    image: ucdlib/rp-ucd-gateway:dev
     env_file:
       - .env
     ports:
@@ -72,7 +72,7 @@ services:
     restart: on-failure
 
   auth:
-    image: ucdlib/rp-ucd-auth-cas:sandbox
+    image: ucdlib/rp-ucd-auth-cas:dev
     env_file:
       - .env
     environment:
@@ -80,19 +80,19 @@ services:
     restart: on-failure
 
   api:
-    image: ucdlib/rp-ucd-api:sandbox
+    image: ucdlib/rp-ucd-api:dev
     env_file:
       - .env
     restart: on-failure
 
   debouncer:
-    image: ucdlib/rp-ucd-kafka-debouncer:sandbox
+    image: ucdlib/rp-ucd-kafka-debouncer:dev
     env_file:
       - .env
     restart: on-failure
 
   indexer:
-    image: ucdlib/rp-ucd-es-indexer:sandbox
+    image: ucdlib/rp-ucd-es-indexer:dev
     env_file:
       - .env
     ports:
@@ -100,7 +100,7 @@ services:
     restart: on-failure
 
   models:
-    image: ucdlib/rp-ucd-es-models:sandbox
+    image: ucdlib/rp-ucd-es-models:dev
     env_file:
       - .env
     restart: on-failure
