--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -82,7 +82,7 @@ steps:
 
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
-    args: [ '-c', 'gcloud compute ssh $${CLUSTER_VM} --zone="$${CLUSTER_ZONE}" -- "BRANCH_NAME="$BRANCH_NAME" /opt/$$CLUSTER_NAME/gcloud/dc-deploy.sh"' ]
+    args: [ '-c', 'if [ $BRANCH_NAME == "sandbox" ]; then gcloud compute ssh $${CLUSTER_VM} --zone="$${CLUSTER_ZONE}" -- "BRANCH_NAME="$BRANCH_NAME" /opt/$$CLUSTER_NAME/gcloud/dc-deploy.sh" ; fi' ]
     env: 
       - 'BRANCH_NAME=$BRANCH_NAME'
       - 'CLUSTER_NAME=rp-$BRANCH_NAME'
