--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - zookeeper-datalog:/datalog
 
   fuseki:
-    image: ucdlib/rp-ucd-fuseki:1.3.2
+    image: gcr.io/ucdlib-pubreg/rp-ucd-fuseki:1.3.3
     env_file:
       - .env
     volumes:
@@ -19,7 +19,7 @@ services:
       - ${FUSEKI_HOST_PORT:-8081}:3030
 
   harvest:
-    image: ucdlib/rp-ucd-harvest:dev
+    image: gcr.io/ucdlib-pubreg/rp-ucd-harvest:dev
     env_file:
       - .env
     volumes:
@@ -58,13 +58,13 @@ services:
       - es-data:/usr/share/elasticsearch/data
 
   client:
-    image: ucdlib/rp-ucd-client:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-client:sandbox
     env_file:
       - .env
     restart: on-failure
 
   gateway:
-    image: ucdlib/rp-ucd-gateway:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-gateway:sandbox
     env_file:
       - .env
     ports:
@@ -72,7 +72,7 @@ services:
     restart: on-failure
 
   auth:
-    image: ucdlib/rp-ucd-auth-cas:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-auth-cas:sandbox
     env_file:
       - .env
     environment:
@@ -80,19 +80,19 @@ services:
     restart: on-failure
 
   api:
-    image: ucdlib/rp-ucd-api:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-api:sandbox
     env_file:
       - .env
     restart: on-failure
 
   debouncer:
-    image: ucdlib/rp-ucd-kafka-debouncer:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-kafka-debouncer:sandbox
     env_file:
       - .env
     restart: on-failure
 
   indexer:
-    image: ucdlib/rp-ucd-es-indexer:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-es-indexer:sandbox
     env_file:
       - .env
     ports:
@@ -100,7 +100,7 @@ services:
     restart: on-failure
 
   models:
-    image: ucdlib/rp-ucd-es-models:sandbox
+    image: gcr.io/ucdlib-pubreg/rp-ucd-es-models:sandbox
     env_file:
       - .env
     restart: on-failure
