--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -103,6 +103,8 @@ services:
     image: {{MODEL_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
       - .env
+    ports:
+      - ${MODELS_HOST_PORT:-8084}:3000
     restart: on-failure
 
 volumes:
