adding service mount

--- a/templates/local-dev.yaml
+++ b/templates/local-dev.yaml
@@ -29,6 +29,8 @@ services:
        - ../{{REPOSITORY_DIR}}/{{HARVEST_REPO_NAME}}/ucdid:/usr/local/bin/ucdid
        - ../{{REPOSITORY_DIR}}/{{HARVEST_REPO_NAME}}/cdl:/usr/local/bin/cdl
        - ../{{REPOSITORY_DIR}}/{{HARVEST_REPO_NAME}}/harvest:/usr/local/bin/harvest
+       - ../{{REPOSITORY_DIR}}/{{HARVEST_REPO_NAME}}/lib/node/lib:/service/lib
+       - ../{{REPOSITORY_DIR}}/{{HARVEST_REPO_NAME}}/lib/node/index.js:/service/index.js
     command: tail -f /dev/null
 
   kafka:
