--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -70,13 +70,37 @@ steps:
       path: '/config'
 
   - name: gcr.io/cloud-builders/gcloud
+    secretEnv: ['SSH_KEY']
     entrypoint: 'bash'
-    args: [ '-c', 'if [ $BRANCH_NAME == "sandbox" ]; then gcloud compute ssh $${CLUSTER_VM} --zone="$${CLUSTER_ZONE}" -- "BRANCH_NAME="$BRANCH_NAME" /opt/$$CLUSTER_NAME/gcloud/dc-deploy.sh" ; fi' ]
+    args: [ '-c', 'echo "$$SSH_KEY" >> /root/.ssh/id_rsa && chmod 400 /root/.ssh/id_rsa' ]
+    volumes:
+    - name: 'ssh'
+      path: /root/.ssh
+
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
+    args: [ '-c', 'ssh-keyscan -t rsa rp-gc-ci.library.ucdavis.edu > /root/.ssh/known_hosts' ]
+    volumes:
+    - name: 'ssh'
+      path: /root/.ssh
+
+  - name: gcr.io/cloud-builders/git
+    secretEnv: ['SSH_USERNAME']
+    entrypoint: 'bash'
+    args: [ '-c', 'ssh $$SSH_USERNAME@rp-gc-ci.library.ucdavis.edu "BRANCH_NAME=$BRANCH_NAME /opt/rp-$$BRANCH_NAME/gcloud/dc-deploy.sh || true"']
     env: 
-      - 'BRANCH_NAME=$BRANCH_NAME'
-      - 'CLUSTER_NAME=rp-$BRANCH_NAME'
-      - 'CLUSTER_ZONE=us-central1-a'
-      - 'CLUSTER_VM=rp-ucd-deployments'
+    - 'BRANCH_NAME=$BRANCH_NAME'
+    volumes:
+    - name: 'ssh'
+      path: /root/.ssh
+
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/digital-ucdavis-edu/secrets/rp-gc-ci-key/versions/latest
+    env: 'SSH_KEY'
+  - versionName: projects/digital-ucdavis-edu/secrets/rp-gc-ci-username/versions/latest
+    env: 'SSH_USERNAME'
 
 substitutions:
   _CONFIG_BUCKET: ci-build-config
