--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -99,6 +99,12 @@ services:
       - ${INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
 
+  status:
+    image: gcr.io/ucdlib-pubreg/rp-index-status:sandbox
+    env_file:
+      - .env
+    restart: on-failure
+
   models:
     image: gcr.io/ucdlib-pubreg/rp-ucd-es-models:sandbox
     env_file:
