--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -99,6 +99,12 @@ services:
       - ${INDEXER_HOST_PORT:-8082}:3000
     restart: on-failure
 
+  status:
+    image: {{STATUS_IMAGE_NAME}}:{{VESSEL_TAG}}
+    env_file:
+      - .env
+    restart: on-failure
+
   models:
     image: {{MODEL_IMAGE_NAME}}:{{VESSEL_TAG}}
     env_file:
