adding kafka-init to deployment

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -39,6 +39,13 @@ services:
     depends_on:
       - "zookeeper"
 
+  kafka-init:
+    image: {{KAFKA_INIT_IMAGE_NAME}}:{{VESSEL_TAG}}
+    env_file:
+      - .env
+    depends_on:
+      - "zookeeper"
+
   redis:
     image: {{REDIS_IMAGE_NAME}}:{{REDIS_TAG}}
     volumes:
