--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,13 @@ services:
     depends_on:
       - "zookeeper"
 
+  kafka-init:
+    image: gcr.io/ucdlib-pubreg/rp-kafka-init:sandbox
+    env_file:
+      - .env
+    depends_on:
+      - "zookeeper"
+
   redis:
     image: redis:6.0.5
     volumes:
